fixes for user.pass

--- a/src/documents/njk-files/login.njk
+++ b/src/documents/njk-files/login.njk
@@ -32,10 +32,11 @@ title: Access Terminal
         id="access-code"
         class="field-input"
         type="password"
-        autocomplete="new-password"
         autocomplete="off"
         autocapitalize="off"
+        autocorrect="off"
         spellcheck="false"
+        inputmode="text"
         required
       >
     </div>
