adding clearance level to footer

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -90,6 +90,7 @@
 
 <footer class="site-footer" data-pagefind-ignore="all">
   <p>Document ID: {{ document_id }}</p>
+  <p>Required Clearance: {{ clearance_required }}</p>
 </footer>
 
 <script src="/assets/js/auth-config.js"></script>
