--- a/src/documents/njk-files/access-denied.njk
+++ b/src/documents/njk-files/access-denied.njk
@@ -19,7 +19,7 @@ pagefind_ignore: true
   </div>
 
   <p class="smallprint">
-    If you believe this is an error, contact Oversight for a clearance review.
+    If you believe this is an error, contact your Overseer for a clearance review.
   </p>
 </div>
 
