--- a/src/documents/njk-files/login.njk
+++ b/src/documents/njk-files/login.njk
@@ -54,7 +54,7 @@ title: Access Terminal
   </form>
 
   <p class="smallprint">
-    If you do not have credentials, contact your Oversight administrator for access.
+    If you do not have credentials, contact your OVERSIGHT administrator for access.
   </p>
 </div>
 
